# makersmiths-turtlebot3

./: .clauderules  .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  README.md  development-plan.md  docker-compose.yml  entrypoint.sh  specification.md
.claude/: CLAUDE.md  README.md  settings.json
.colcon/: defaults.yaml
.devcontainer/: Dockerfile.simulator  Dockerfile.turtlebot  devcontainer.json
config/: params.yaml
docker/: Dockerfile.simulator  Dockerfile.turtlebot  docker-compose.yaml
docs/: architecture.md  architecure-json.json  architecure-mermaid.md  development-plan.md  getting-started-using-docker-for-ros-on-nucboxm6.md  nav2_rosgraph_analysis.pptx  rqt_graph-architecture.dot  specification.md  (+6 more)
src/tb3_bringup/: package.xml  setup.cfg  setup.py
src/tb3_bringup/config/: bridge_params.yaml  gazebo_params.yaml  nav2_params.yaml  slam_params.yaml  teleop_twist_joy.yaml
src/tb3_bringup/config/maps/: phase6_map.pgm  phase6_map.yaml
src/tb3_bringup/launch/: capability_demo.launch.py  gamepad.launch.py  nav2.launch.py  nav2_bringup.launch.py  obstacle_avoidance.launch.py  sim_bringup.launch.py  sim_house.launch.py  slam.launch.py  teleop.launch.py  wanderer.launch.py
src/tb3_bringup/rviz/: nav2.rviz  teleop.rviz
src/tb3_bringup/test/: conftest.py  test_bridge_params.py  test_launch_args.py  test_t1_container_startup.py  test_t2_topic_comms.py  test_t3_gazebo_launch.py  test_t4_drive_command.py  test_t5_obstacle_avoidance.py  test_t6_slam.py  test_t7_nav2.py
src/tb3_bringup/worlds/: tb3_house.world  tb3_sim.world  tb3_warehouse.world
(+54 files in other folders)
